fix: resolvendo cor do texto sem contraste

--- a/src/App.css
+++ b/src/App.css
@@ -25,4 +25,5 @@ input {
     font-size: 20px;
     border-radius: 0;
     border-bottom: 1px solid #ff002b;
+    color: var(--light);
 }
